<resources>
    <string name="app_name">Inventory App</string>
    <string name="unknown_price">Unknown price</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="price">价格</string>
    <string name="hint_price">price</string>
    <string name="units_hint">元</string>
    <string name="name">商品名</string>
    <string name="name_hint">Name</string>
    <string name="num">库存数量</string>
    <string name="numSale">销售数量</string>
    <string name="numBuy">订购数量</string>
    <string name="number_hint">Number</string>
    <string name="number_units_hint">个</string>
    <string name="mail">供应商邮箱</string>
    <string name="mail_hint">Mail</string>
    <string name="title_add">添加新商品</string>
    <string name="title_edit">编辑商品</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="unsaved_changes_dialog_msg">放弃保存退出编辑吗?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="edit_insert_failed">Error insert</string>
    <string name="edit_insert_successful">Product has saved </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="deletemsg">rows deleted from product database</string>
    <string name="dummy_name">Toto</string>
    <string name="dummy_price">100</string>
    <string name="dummy_mail">cjwstorm@163.com</string>
    <string name="noProducts">无库存</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="numCatnotsmallthan0"><![CDATA[num can\'t < 0]]></string>
    <string name="buy_more">订购更多</string>
    <string name="mail_want_more">i want more about</string>
    <string name="num0">0</string>
    <string name="price0">0.00</string>
    <string name="element_not_null">名字,邮箱,价格不能为空</string>
    <string name="sale_out">卖出</string>
</resources>
